--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <div class="header">
         <div class="nav-bar">
-            <div class="">Header Logo</div>
+            <div class="logo">Header Logo</div>
             <div class="links">
                 <a href="#">
                     <div class="link-one" >header link one</div>
@@ -28,13 +28,14 @@
                 </a>
         </div>
     </div>
-
     <div class="hero">
         <div class="header-content">
-            <div>This website is awesome</div>
-            <div>This website has some subtext that goes here under the main title. It's smaller font and color is lower contrast</div>
-            <button>Sign up</button>
-            <img src="images/test-image.png" alt="">
+            <div class="texts">
+                <div class="hero-main-text">This website is awesome</div>
+                <div class="hero-secondary-text">This website has some subtext that goes here under the main title. It's smaller font and color is lower contrast</div>
+                <button class="butt">Sign up</button>
+            </div>
+            <div class="place-holder">This is a placeholder for an image </div>
         </div>
     </div>
 
