--- a/index.html
+++ b/index.html
@@ -75,10 +75,20 @@
     
     <div class="quote-container">
       <div class="quote-content">
-        <div class="quote1">
+        <div class="quote">
           This is an inspiring  quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
         </div>
         <div class="author">-Thor, God of Thunder</div>
+      </div>
+    </div>
+    
+    <div class="color-blue-section">
+      <div class="color-blue-content">
+        <div class="color-blue-texts">
+          <div class="color-blue-header">Call to action! It's time!</div>
+          <div class="color-blue-subtext">Sign up for our product by clicking that button right over there</div>
+        </div>
+        <div><button class="butt-2">Sign up</button></div>
       </div>
     </div>
 
