add footer section

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="author">-Thor, God of Thunder</div>
       </div>
     </div>
-    
+    <!-- color blue section -->
     <div class="color-blue-section">
       <div class="color-blue-content">
         <div class="color-blue-texts">
@@ -89,6 +89,12 @@
           <div class="color-blue-subtext">Sign up for our product by clicking that button right over there</div>
         </div>
         <div><button class="butt-2">Sign up</button></div>
+      </div>
+    </div>
+    <!-- footer section -->
+    <div class="footer-container">
+      <div class="footer-contents">
+        Copyright &copy; The Odin Project 2021
       </div>
     </div>
 
